fixed msg font size

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Love</title>
     <style>
         body {
@@ -58,14 +59,14 @@
 
         @media (max-width: 600px) {
             #footer {
-                font-size: 18px;
-                opacity: 0.85;
-                bottom: 12px;
+                font-size: 22px;
+                opacity: 0.9;
+                bottom: 14px;
             }
 
             #hint {
-                font-size: 20px;
-                bottom: 40px;
+                font-size: 24px;
+                bottom: 48px;
             }
         }
     </style>
