fixed msg font size

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         @media (max-width: 600px) {
             #footer {
-                font-size: 12px;
-                opacity: 0.9;
+                font-size: 10px;
+                opacity: 0.7;
                 bottom: 14px;
             }
 
@@ -96,31 +96,31 @@
 
         // --- UNIQUE MESSAGE LOGIC ---
         const loveNotes = [
-            "Moonlight.",
+            "My Moonlight.",
             "Don’t overthink.",
             "My favorite variable.",
-            "You matter a lot.",
+            "You Matter a lot.",
             "Still choosing you.",
-            "Wildflower.",
+            "A Wildflower.",
             "Forever maybe.",
             "You feel safe.",
-            "So cute.",
+            "Soo cuuuuute.",
             "You're my peace.",
             "Miss your smile.",
-            "you're my Paracetamol.",
-            "You matter",
+            "My Paracetamol.",
             "Hold my hand?.",
-            "Try harder.",
+            "Drama queen.",
             "Always you.",
             "Dreaming?.",
             "Innocent soul.",
             "You’re my weakness.",
-            "I noticed that.",
+            "Beautiful soul.",
             "Control that smile.",
-            "Too charming.",
+            "My favorite headache.",
             "Miss beautiful.",
             "Those dreamy eyes.",
             "Relax, cutie.",
+            "Gorgeous.",
         ];
 
         function shuffle(array) {
