fixed msg font size

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             "My favorite variable.",
             "You Matter a lot.",
             "Still choosing you.",
-            "A Wildflower.",
+            "Wildflower energy.",
             "Forever maybe.",
             "You feel safe.",
             "Soo cuuuuute.",
             "You're my peace.",
             "Miss your smile.",
             "My Paracetamol.",
-            "Hold my hand?.",
+            "Hold my hand.",
             "Drama queen.",
             "Always you.",
             "Dreaming?.",
@@ -116,11 +116,11 @@
             "You’re my weakness.",
             "Beautiful soul.",
             "Control that smile.",
-            "My favorite headache.",
+            "My sweet headache.",
             "Miss beautiful.",
-            "Those dreamy eyes.",
+            "Heart-stealing eyes.",
             "Relax, cutie.",
-            "Gorgeous.",
+            "Innocently gorgeous.",
         ];
 
         function shuffle(array) {
